element EN aligning

--- a/hw4/index.html
+++ b/hw4/index.html
@@ -31,7 +31,7 @@
 
       <div class="lang">
         <img class="lang-img" src="img/lang.svg" alt="English" />
-        <span class="lang-choice">EN</span>
+        <span>EN</span>
         <img class="arrow" src="img/caret-down.svg" alt="arrow down" />
       </div>
 
