tables size and dots style editing

--- a/hw3/index.html
+++ b/hw3/index.html
@@ -27,17 +27,35 @@
         <tr>
           <td class="line">File.pdf</td>
           <td class="date line">3 mins ago</td>
-          <td class="line last-col"><img src="img/dots.png" /></td>
+          <td class="line last-col">
+            <div>
+              <span class="dots"></span>
+              <span class="dots"></span>
+              <span class="dots"></span>
+            </div>
+          </td>
         </tr>
         <tr>
           <td class="line">File.pdf</td>
           <td class="date line">Yesterday</td>
-          <td class="line last-col"><img src="img/dots.png" /></td>
+          <td class="line last-col">
+            <div>
+              <span class="dots"></span>
+              <span class="dots"></span>
+              <span class="dots"></span>
+            </div>
+          </td>
         </tr>
         <tr>
           <td>File.pdf</td>
           <td class="date">June 1st, 2019</td>
-          <td class="last-col"><img src="img/dots.png" /></td>
+          <td class="last-col">
+            <div>
+              <span class="dots"></span>
+              <span class="dots"></span>
+              <span class="dots"></span>
+            </div>
+          </td>
         </tr>
       </tbody>
     </table>
@@ -59,17 +77,35 @@
         <tr>
           <td class="line"><img class="box" src="img/box.png" /> File.pdf</td>
           <td class="date line">3 mins ago</td>
-          <td class="line last-col"><img src="img/dots.png" /></td>
+          <td class="line last-col">
+            <div>
+              <span class="dots"></span>
+              <span class="dots"></span>
+              <span class="dots"></span>
+            </div>
+          </td>
         </tr>
         <tr>
           <td class="line"><img class="box" src="img/check.png" /> File.pdf</td>
           <td class="date line">Yesterday</td>
-          <td class="line last-col"><img src="img/dots.png" /></td>
+          <td class="line last-col">
+            <div>
+              <span class="dots"></span>
+              <span class="dots"></span>
+              <span class="dots"></span>
+            </div>
+          </td>
         </tr>
         <tr>
           <td><img class="box" src="img/box.png" /> File.pdf</td>
           <td class="date">June 1st, 2019</td>
-          <td class="last-col"><img src="img/dots.png" /></td>
+          <td class="last-col">
+            <div>
+              <span class="dots"></span>
+              <span class="dots"></span>
+              <span class="dots"></span>
+            </div>
+          </td>
         </tr>
       </tbody>
     </table>
@@ -92,17 +128,35 @@
         <tr>
           <td class="line">File.pdf</td>
           <td class="date line">3 mins ago</td>
-          <td class="line last-col"><img src="img/dots.png" /></td>
+          <td class="line last-col">
+            <div>
+              <span class="dots"></span>
+              <span class="dots"></span>
+              <span class="dots"></span>
+            </div>
+          </td>
         </tr>
         <tr>
           <td class="line">File.pdf</td>
           <td class="date line">Yesterday</td>
-          <td class="line last-col"><img src="img/dots.png" /></td>
+          <td class="line last-col">
+            <div>
+              <span class="dots"></span>
+              <span class="dots"></span>
+              <span class="dots"></span>
+            </div>
+          </td>
         </tr>
         <tr>
           <td>File.pdf</td>
           <td class="date">June 1st, 2019</td>
-          <td class="last-col"><img src="img/dots.png" /></td>
+          <td class="last-col">
+            <div>
+              <span class="dots"></span>
+              <span class="dots"></span>
+              <span class="dots"></span>
+            </div>
+          </td>
         </tr>
       </tbody>
     </table>
