adding icons and checkboxes

--- a/hw3/index.html
+++ b/hw3/index.html
@@ -75,7 +75,7 @@
       </thead>
       <tbody>
         <tr>
-          <td class="line"><img class="box" src="img/box.png" /> File.pdf</td>
+          <td class="line"><input type="checkbox" /> File.pdf</td>
           <td class="date line">3 mins ago</td>
           <td class="line last-col">
             <div>
@@ -86,7 +86,7 @@
           </td>
         </tr>
         <tr>
-          <td class="line"><img class="box" src="img/check.png" /> File.pdf</td>
+          <td class="line"><input type="checkbox" checked /> File.pdf</td>
           <td class="date line">Yesterday</td>
           <td class="line last-col">
             <div>
@@ -97,7 +97,7 @@
           </td>
         </tr>
         <tr>
-          <td><img class="box" src="img/box.png" /> File.pdf</td>
+          <td><input type="checkbox" /> File.pdf</td>
           <td class="date">June 1st, 2019</td>
           <td class="last-col">
             <div>
@@ -126,7 +126,9 @@
       </thead>
       <tbody>
         <tr>
-          <td class="line">File.pdf</td>
+          <td class="line">
+            <img src="img/favicon.ico" class="icon" />File.pdf
+          </td>
           <td class="date line">3 mins ago</td>
           <td class="line last-col">
             <div>
@@ -137,7 +139,9 @@
           </td>
         </tr>
         <tr>
-          <td class="line">File.pdf</td>
+          <td class="line">
+            <img src="img/favicon.ico" class="icon" />File.pdf
+          </td>
           <td class="date line">Yesterday</td>
           <td class="line last-col">
             <div>
@@ -148,7 +152,7 @@
           </td>
         </tr>
         <tr>
-          <td>File.pdf</td>
+          <td><img src="img/favicon.ico" class="icon" />File.pdf</td>
           <td class="date">June 1st, 2019</td>
           <td class="last-col">
             <div>
