adding width to elements, nav bar editing

--- a/hw4/index.html
+++ b/hw4/index.html
@@ -17,25 +17,27 @@
 
   <body>
     <!-- Navigation bar -->
-    <div class="navbar">
-      <div class="logo">
-        <img class="logo-img" src="img/icon.svg" alt="Cloud" />
-        CLOUDBUDGET
+    <div class="nav-wrapper">
+      <div class="navbar">
+        <div class="logo">
+          <img class="logo-img" src="img/icon.svg" alt="Cloud" />
+          CLOUDBUDGET
+        </div>
+
+        <div class="pages">OVERVIEW</div>
+        <div class="pages">FEATURES</div>
+        <div class="pages">TECHNOLOGY</div>
+        <div class="pages">CONTACT</div>
+        <div class="pages">SIGN UP</div>
+
+        <div class="lang">
+          <img class="lang-img" src="img/lang.svg" alt="English" />
+          <span>EN</span>
+          <img class="arrow" src="img/caret-down.svg" alt="arrow down" />
+        </div>
+
+        <button class="login-key">LOGIN</button>
       </div>
-
-      <div class="pages">OVERVIEW</div>
-      <div class="pages">FEATURES</div>
-      <div class="pages">TECHNOLOGY</div>
-      <div class="pages">CONTACT</div>
-      <div class="pages">SIGN UP</div>
-
-      <div class="lang">
-        <img class="lang-img" src="img/lang.svg" alt="English" />
-        <span>EN</span>
-        <img class="arrow" src="img/caret-down.svg" alt="arrow down" />
-      </div>
-
-      <button class="login-key">LOGIN</button>
     </div>
 
     <!-- Main section -->
