fonts and social-media fix

--- a/hw5/index.html
+++ b/hw5/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
     />
     <link
       rel="stylesheet"
@@ -86,24 +86,24 @@
           >
           <a class="contact-link" href="tel:+18447217120"> +1 844-721-7120</a>
           <div class="social-network">
-            <img
-              src="img/facebook.svg"
-              alt="Facebook"
-              class="social-network-img"
-              href="https://www.facebook.com"
-            />
-            <img
-              src="img/linkedin.svg"
-              alt="LinkedIn"
-              class="social-network-img"
-              href="https://www.linkedin.com"
-            />
-            <img
-              src="img/twitter.svg"
-              alt="Twitter"
-              class="social-network-img"
-              href="https://twitter.com"
-            />
+            <a href="https://www.facebook.com">
+              <img
+                src="img/facebook.svg"
+                alt="Facebook"
+                class="social-network-img"
+            /></a>
+            <a href="https://www.linkedin.com">
+              <img
+                src="img/linkedin.svg"
+                alt="LinkedIn"
+                class="social-network-img"
+            /></a>
+            <a href="https://twitter.com">
+              <img
+                src="img/twitter.svg"
+                alt="Twitter"
+                class="social-network-img"
+            /></a>
           </div>
         </div>
 
