hw5 adjusting as per comments

--- a/hw5/index.html
+++ b/hw5/index.html
@@ -50,7 +50,7 @@
         <input type="text" class="contact" placeholder="Last Name" />
         <input type="text" class="contact-wide" placeholder="Phone Number" />
 
-        <select class="contact-wide">
+        <select class="contact-wide minimal">
           <option selected="selected">Select Service</option>
           <option>Select Another Service</option>
         </select>
