hw4 adjusting as per comments

--- a/hw4/index.html
+++ b/hw4/index.html
@@ -24,12 +24,13 @@
           CLOUDBUDGET
         </div>
 
-        <div class="pages">OVERVIEW</div>
-        <div class="pages">FEATURES</div>
-        <div class="pages">TECHNOLOGY</div>
-        <div class="pages">CONTACT</div>
-        <div class="pages">SIGN UP</div>
-
+        <div class="pages-list">
+          <div class="pages">Overview</div>
+          <div class="pages">Features</div>
+          <div class="pages">Technology</div>
+          <div class="pages">Contact</div>
+          <div class="pages">Sign up</div>
+        </div>
         <div class="lang">
           <img class="lang-img" src="img/lang.svg" alt="English" />
           <span>EN</span>
@@ -43,10 +44,9 @@
     <!-- Main section -->
     <div class="main">
       <h1 class="title">CLOUDBUDGET</h1>
-      <p class="desc">
-        Cloud budget management for everyone. Only €69.95 a Month After a 7 Day
-        Trial of Up to €4.99
-      </p>
+      <p class="desc">Cloud budget management for everyone. Only</p>
+      <p class="desc">€69.95 a Month After a 7 Day Trial of</p>
+      <p class="desc">Up to €4.99</p>
       <button class="sign-key">SIGN UP</button>
     </div>
   </body>
