--- a/hw8/index.html
+++ b/hw8/index.html
@@ -15,213 +15,217 @@
     <link rel="stylesheet" href="index.css" />
     <title>HW_8</title>
   </head>
+
+  <body>
+    <nav class="side-nav">
+      <a><span class="logo">F.</span></a>
+      <a><img src="img/home.svg" alt="Home" class="side-nav-item" /></a>
+      <a><img src="img/university.svg" alt="Grades" class="side-nav-item" /></a>
+      <a><img src="img/profile.svg" alt="Profile" class="side-nav-item" /></a>
+      <a><img src="img/message.svg" alt="Conact us" class="side-nav-item" /></a>
+      <a><img src="img/settings.svg" alt="Settings" class="side-nav-item" /></a>
+      <a><img src="img/exit.svg" alt="Loq out" class="side-nav-item" /></a>
+    </nav>
+
+    <div class="wrap-left">
+      <header>
+        <h1>Hello Josh!</h1>
+        <p class="greeting">It’s good to see you again.</p>
+        <img src="img/Illustration.png" aria-hidden="true" class="greet-img" />
+      </header>
+
+      <div class="wrap-current">
+        <section class="current">
+          <div class="img-back">
+            <img src="img/spanish.svg" alt="Spanish" class="course-img" />
+          </div>
+          <div class="wrap-course-text">
+            <h4 class="course-title">Spanish B2</h4>
+            <p class="course-author">by Alejandro Velazquez</p>
+          </div>
+          <div class="current-progress">
+            <img
+              src="img/progress.svg"
+              aria-hidden="true"
+              class="progress-bar"
+            />
+            <p class="progress-value">83%</p>
+          </div>
+          <button class="course-go">Continue</button>
+        </section>
+
+        <div class="go-to">
+          <img src="img/arrow.png" alt="Next" class="arrow back" />
+          <img src="img/arrow.png" alt="Previous" class="arrow" />
+        </div>
+      </div>
+
+      <div class="wrap-courses">
+        <h2>Courses</h2>
+        <nav class="courses">
+          <a href="" class="courses-link">All Courses</a>
+          <a href="" class="courses-link">The Newest</a>
+          <a href="" class="courses-link">Top Rated</a>
+          <a href="" class="courses-link">Most Popular</a>
+        </nav>
+
+        <section class="courses-item">
+          <div class="img-back">
+            <img src="img/figma.svg" alt="Figma" class="course-img" />
+          </div>
+          <div class="wrap-course-text">
+            <h4 class="course-title">Learn Figma</h4>
+            <p class="course-author">by Christopher Morgan</p>
+          </div>
+          <div class="duration">
+            <img src="img/time.svg" aria-hidden="true" class="clock" />
+            <span class="course-duration">6h 30min</span>
+          </div>
+          <div class="score">
+            <img src="img/flame.svg" aria-hidden="true" class="flame" />
+            <span class="course-score">4,9</span>
+          </div>
+          <button class="course-go">View course</button>
+        </section>
+
+        <section class="courses-item">
+          <div class="img-back">
+            <img
+              src="img/analog.svg"
+              alt="Analog photography"
+              class="course-img"
+            />
+          </div>
+          <div class="wrap-course-text">
+            <h4 class="course-title">Analog photography</h4>
+            <p class="course-author">by Gordon Norman</p>
+          </div>
+          <div class="duration">
+            <img src="img/time.svg" aria-hidden="true" class="clock" />
+            <span class="course-duration">3h 15min</span>
+          </div>
+          <div class="score">
+            <img src="img/flame.svg" aria-hidden="true" class="flame" />
+            <span class="course-score">4,7</span>
+          </div>
+          <button class="course-go">View course</button>
+        </section>
+
+        <section class="courses-item">
+          <div class="img-back">
+            <img src="img/instagram.svg" alt="instagram" class="course-img" />
+          </div>
+          <div class="wrap-course-text">
+            <h4 class="course-title">Master Instagram</h4>
+            <p class="course-author">by Sophie Gill</p>
+          </div>
+          <div class="duration">
+            <img src="img/time.svg" aria-hidden="true" class="clock" />
+            <span class="course-duration">7h 40min</span>
+          </div>
+          <div class="score">
+            <img src="img/flame.svg" aria-hidden="true" class="flame" />
+            <span class="course-score">4,6</span>
+          </div>
+          <button class="course-go">View course</button>
+        </section>
+
+        <section class="courses-item">
+          <div class="img-back">
+            <img src="img/pencil.svg" alt="Drawing" class="course-img" />
+          </div>
+          <div class="wrap-course-text">
+            <h4 class="course-title">Basics of drawing</h4>
+
+            <p class="course-author">by Jean Tate</p>
+          </div>
+          <div class="duration">
+            <img src="img/time.svg" aria-hidden="true" class="clock" />
+            <span class="course-duration">11h 30min</span>
+          </div>
+          <div class="score">
+            <img src="img/flame.svg" aria-hidden="true" class="flame" />
+            <span class="course-score">4,8</span>
+          </div>
+          <button class="course-go">View course</button>
+        </section>
+
+        <section class="courses-item">
+          <div class="img-back">
+            <img src="img/ps.svg" alt="Photoshop" class="course-img" />
+          </div>
+          <div class="wrap-course-text">
+            <h4 class="course-title">Photoshop - Essence</h4>
+            <p class="course-author">by David Green</p>
+          </div>
+          <div class="duration">
+            <img src="img/time.svg" aria-hidden="true" class="clock" />
+            <span class="course-duration">5h 35min</span>
+          </div>
+          <div class="score">
+            <img src="img/flame.svg" aria-hidden="true" class="flame" />
+            <span class="course-score">4,7</span>
+          </div>
+          <button class="course-go">View course</button>
+        </section>
+      </div>
+    </div>
+
+    <div class="wrap-right">
+      <header class="head-right">
+        <div class="wrap-search">
+          <input type="text" class="search" />
+          <img src="img/magnifier.svg" alt="Search" class="search-img" />
+        </div>
+
+        <img src="img/Notification.svg" aria-hidden="true" class="notif" />
+
+        <div class="wrap-profile">
+          <img src="img/photo.png" alt="Profile" class="profile" />
+          <i class="arrow-down"></i>
+        </div>
+      </header>
+
+      <div class="wrap-stat-info">
+        <section class="stat">
+          <p class="stat-count">11</p>
+          <p class="stat-text">Courses completed</p>
+        </section>
+
+        <section class="stat">
+          <p class="stat-count">4</p>
+          <p class="stat-text">Courses in progress</p>
+        </section>
+      </div>
+
+      <div class="wrap-stat-graph">
+        <h2 class="stat-title">Your statistics</h2>
+
+        <div class="wrap-stat-head">
+          <div class="stat-head">Learning Hours</div>
+          <div class="stat-head">My Courses</div>
+          <select name="" id="">
+            <option selected>Weekly</option>
+            <option>Monthly</option>
+            <option>Annual</option>
+          </select>
+        </div>
+
+        <figure>
+          <img src="img/graph.png" aria-hidden="true" class="stat-graph" />
+        </figure>
+      </div>
+
+      <article class="wrap-more">
+        <div class="wrap-text-more">
+          <h2 class="more-title">Learn even more!</h2>
+          <p class="more-text">
+            Unlock premium features only for $9.99 per month.
+          </p>
+          <button class="course-go">Go Premium</button>
+        </div>
+        <img src="img/book.png" aria-hidden="true" class="more-img" />
+      </article>
+    </div>
+  </body>
 </html>
-
-<body>
-  <nav class="side-nav">
-    <a><span class="logo">F.</span></a>
-    <a><img src="img/home.svg" alt="Home" class="side-nav-item" /></a>
-    <a><img src="img/university.svg" alt="Grades" class="side-nav-item" /></a>
-    <a><img src="img/profile.svg" alt="Profile" class="side-nav-item" /></a>
-    <a><img src="img/message.svg" alt="Conact us" class="side-nav-item" /></a>
-    <a><img src="img/settings.svg" alt="Settings" class="side-nav-item" /></a>
-    <a><img src="img/exit.svg" alt="Loq out" class="side-nav-item" /></a>
-  </nav>
-
-  <div class="wrap-left">
-    <header>
-      <h1>Hello Josh!</h1>
-      <p class="greeting">It’s good to see you again.</p>
-      <img src="img/Illustration.png" aria-hidden="true" class="greet-img" />
-    </header>
-
-    <div class="wrap-current">
-      <section class="current">
-        <div class="img-back">
-          <img src="img/spanish.svg" alt="Spanish" class="course-img" />
-        </div>
-        <div class="wrap-course-text">
-          <h4 class="course-title">Spanish B2</h4>
-          <p class="course-author">by Alejandro Velazquez</p>
-        </div>
-        <div class="current-progress">
-          <img src="img/progress.svg" aria-hidden="true" class="progress-bar" />
-          <p class="progress-value">83%</p>
-        </div>
-        <button class="course-go">Continue</button>
-      </section>
-
-      <div class="go-to">
-        <img src="img/arrow.png" alt="Next" class="arrow back" />
-        <img src="img/arrow.png" alt="Previous" class="arrow" />
-      </div>
-    </div>
-
-    <div class="wrap-courses">
-      <h2>Courses</h2>
-      <nav class="courses">
-        <a href="" class="courses-link">All Courses</a>
-        <a href="" class="courses-link">The Newest</a>
-        <a href="" class="courses-link">Top Rated</a>
-        <a href="" class="courses-link">Most Popular</a>
-      </nav>
-
-      <section class="courses-item">
-        <div class="img-back">
-          <img src="img/figma.svg" alt="Figma" class="course-img" />
-        </div>
-        <div class="wrap-course-text">
-          <h4 class="course-title">Learn Figma</h4>
-          <p class="course-author">by Christopher Morgan</p>
-        </div>
-        <div class="duration">
-          <img src="img/time.svg" aria-hidden="true" class="clock" />
-          <span class="course-duration">6h 30min</span>
-        </div>
-        <div class="score">
-          <img src="img/flame.svg" aria-hidden="true" class="flame" />
-          <span class="course-score">4,9</span>
-        </div>
-        <button class="course-go">View course</button>
-      </section>
-
-      <section class="courses-item">
-        <div class="img-back">
-          <img
-            src="img/analog.svg"
-            alt="Analog photography"
-            class="course-img"
-          />
-        </div>
-        <div class="wrap-course-text">
-          <h4 class="course-title">Analog photography</h4>
-          <p class="course-author">by Gordon Norman</p>
-        </div>
-        <div class="duration">
-          <img src="img/time.svg" aria-hidden="true" class="clock" />
-          <span class="course-duration">3h 15min</span>
-        </div>
-        <div class="score">
-          <img src="img/flame.svg" aria-hidden="true" class="flame" />
-          <span class="course-score">4,7</span>
-        </div>
-        <button class="course-go">View course</button>
-      </section>
-
-      <section class="courses-item">
-        <div class="img-back">
-          <img src="img/instagram.svg" alt="instagram" class="course-img" />
-        </div>
-        <div class="wrap-course-text">
-          <h4 class="course-title">Master Instagram</h4>
-          <p class="course-author">by Sophie Gill</p>
-        </div>
-        <div class="duration">
-          <img src="img/time.svg" aria-hidden="true" class="clock" />
-          <span class="course-duration">7h 40min</span>
-        </div>
-        <div class="score">
-          <img src="img/flame.svg" aria-hidden="true" class="flame" />
-          <span class="course-score">4,6</span>
-        </div>
-        <button class="course-go">View course</button>
-      </section>
-
-      <section class="courses-item">
-        <div class="img-back">
-          <img src="img/pencil.svg" alt="Drawing" class="course-img" />
-        </div>
-        <div class="wrap-course-text">
-          <h4 class="course-title">Basics of drawing</h4>
-
-          <p class="course-author">by Jean Tate</p>
-        </div>
-        <div class="duration">
-          <img src="img/time.svg" aria-hidden="true" class="clock" />
-          <span class="course-duration">11h 30min</span>
-        </div>
-        <div class="score">
-          <img src="img/flame.svg" aria-hidden="true" class="flame" />
-          <span class="course-score">4,8</span>
-        </div>
-        <button class="course-go">View course</button>
-      </section>
-
-      <section class="courses-item">
-        <div class="img-back">
-          <img src="img/ps.svg" alt="Photoshop" class="course-img" />
-        </div>
-        <div class="wrap-course-text">
-          <h4 class="course-title">Photoshop - Essence</h4>
-          <p class="course-author">by David Green</p>
-        </div>
-        <div class="duration">
-          <img src="img/time.svg" aria-hidden="true" class="clock" />
-          <span class="course-duration">5h 35min</span>
-        </div>
-        <div class="score">
-          <img src="img/flame.svg" aria-hidden="true" class="flame" />
-          <span class="course-score">4,7</span>
-        </div>
-        <button class="course-go">View course</button>
-      </section>
-    </div>
-  </div>
-
-  <div class="wrap-right">
-    <header class="head-right">
-      <div class="wrap-search">
-        <input type="text" class="search" />
-        <img src="img/magnifier.svg" alt="Search" class="search-img" />
-      </div>
-
-      <img src="img/Notification.svg" aria-hidden="true" class="notif" />
-
-      <div class="wrap-profile">
-        <img src="img/photo.png" alt="Profile" class="profile" />
-        <i class="arrow-down"></i>
-      </div>
-    </header>
-
-    <div class="wrap-stat-info">
-      <section class="stat">
-        <p class="stat-count">11</p>
-        <p class="stat-text">Courses completed</p>
-      </section>
-
-      <section class="stat">
-        <p class="stat-count">4</p>
-        <p class="stat-text">Courses in progress</p>
-      </section>
-    </div>
-
-    <div class="wrap-stat-graph">
-      <h2 class="stat-title">Your statistics</h2>
-
-      <div class="wrap-stat-head">
-        <div class="stat-head">Learning Hours</div>
-        <div class="stat-head">My Courses</div>
-        <select name="" id="">
-          <option selected>Weekly</option>
-          <option>Monthly</option>
-          <option>Annual</option>
-        </select>
-      </div>
-
-      <figure>
-        <img src="img/graph.png" aria-hidden="true" class="stat-graph" />
-      </figure>
-    </div>
-
-    <article class="wrap-more">
-      <div class="wrap-text-more">
-        <h2 class="more-title">Learn even more!</h2>
-        <p class="more-text">
-          Unlock premium features only for $9.99 per month.
-        </p>
-        <button class="course-go">Go Premium</button>
-      </div>
-      <img src="img/book.png" aria-hidden="true" class="more-img" />
-    </article>
-  </div>
-</body>
