hw7 editing as per comments

--- a/hw7/index.html
+++ b/hw7/index.html
@@ -46,6 +46,6 @@
     </div>
 
     <h1>Part 2</h1>
-    <button><span>Create my website</span></button>
+    <button><span class="double-lines">Create my website</span></button>
   </body>
 </html>
