correction after validator

--- a/hw10/index.html
+++ b/hw10/index.html
@@ -124,21 +124,21 @@
     <div class="carousel-inner">
         <div class="carousel-item active">
             <div class="container">
-            <img src="img/pexels-photo-1130847.jpeg" aria-hidden="false" class="photo">
-            <img src="img/pexels-photo-1166209.jpeg" aria-hidden="false" class="photo">
-            <img src="img/pexels-photo-1295138.jpeg" aria-hidden="false" class="photo">
-            <img src="img/pexels-photo-1366919.jpeg" aria-hidden="false" class="photo">
-            <img src="img/pexels-photo-1450082.jpeg" aria-hidden="false" class="photo">
-            <img src="img/pexels-photo-1486974.jpeg" aria-hidden="false" class="photo">
-            <img src="img/pexels-photo-1586298.jpeg" aria-hidden="false" class="photo">
-            <img src="img/pexels-photo-1598073.jpeg" aria-hidden="false" class="photo">
-            <img src="img/pexels-photo-1620372.jpeg" aria-hidden="false" class="photo">
-            <img src="img/pexels-photo-1666021.webp" aria-hidden="false" class="photo">
-            <img src="img/pexels-photo-1670187.jpeg" aria-hidden="false" class="photo">
-            <img src="img/pexels-photo-1785493.jpeg" aria-hidden="false" class="photo">
-            <img src="img/pexels-photo-1933239.jpeg" aria-hidden="false" class="photo">
-            <img src="img/pexels-photo-2123573.jpeg" aria-hidden="false" class="photo">
-            <img src="img/pexels-photo-234510.jpeg" aria-hidden="false" class="photo">
+            <img src="img/pexels-photo-1130847.jpeg" aria-hidden="true" class="photo">
+            <img src="img/pexels-photo-1166209.jpeg" aria-hidden="true" class="photo">
+            <img src="img/pexels-photo-1295138.jpeg" aria-hidden="true" class="photo">
+            <img src="img/pexels-photo-1366919.jpeg" aria-hidden="true" class="photo">
+            <img src="img/pexels-photo-1450082.jpeg" aria-hidden="true" class="photo">
+            <img src="img/pexels-photo-1486974.jpeg" aria-hidden="true" class="photo">
+            <img src="img/pexels-photo-1586298.jpeg" aria-hidden="true" class="photo">
+            <img src="img/pexels-photo-1598073.jpeg" aria-hidden="true" class="photo">
+            <img src="img/pexels-photo-1620372.jpeg" aria-hidden="true" class="photo">
+            <img src="img/pexels-photo-1666021.webp" aria-hidden="true" class="photo">
+            <img src="img/pexels-photo-1670187.jpeg" aria-hidden="true" class="photo">
+            <img src="img/pexels-photo-1785493.jpeg" aria-hidden="true" class="photo">
+            <img src="img/pexels-photo-1933239.jpeg" aria-hidden="true" class="photo">
+            <img src="img/pexels-photo-2123573.jpeg" aria-hidden="true" class="photo">
+            <img src="img/pexels-photo-234510.jpeg" aria-hidden="true" class="photo">
         </div>
         </div> 
 
