initial hw12 commit

--- a/hw10/index.html
+++ b/hw10/index.html
@@ -37,7 +37,7 @@
                         d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z" />
                 </svg></span>
             </div>
-            <textarea class="form-control" aria-label="With textarea"></textarea>
+            <input class="form-control" aria-label="With textarea"></input>
         </div>
                
             <div class="navbar-nav flex-row">
