test for pagespeed

--- a/hw14/index.html
+++ b/hw14/index.html
@@ -265,10 +265,9 @@
 </section>
 <footer>
     <div class="wrapper">
-
     </div>
 </footer>
-<script src="lib/plugins.js"></script>
+<!-- <script src="lib/plugins.js"></script> -->
 <script>
     // 2. This code loads the IFrame Player API code asynchronously.
     var tag = document.createElement('script');
